# ChangeLog for app-admin/fleet
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/fleet/ChangeLog,v 1.13 2015/04/17 23:31:39 alunduil Exp $

  17 Apr 2015; Alex Brandt <alunduil@gentoo.org> -fleet-0.9.0.ebuild:
  remove version 0.9.0

*fleet-0.10.0 (17 Apr 2015)

  17 Apr 2015; Alex Brandt <alunduil@gentoo.org> +fleet-0.10.0.ebuild:
  add version 0.10.0

  17 Apr 2015; Alex Brandt <alunduil@gentoo.org> fleet-9999.ebuild:
  drop irrelevant message about old version updates

  05 Apr 2015; Alex Brandt <alunduil@gentoo.org> -fleet-0.8.3.ebuild:
  remove version 0.8.3

*fleet-0.9.2 (05 Apr 2015)

  05 Apr 2015; Alex Brandt <alunduil@gentoo.org> +fleet-0.9.2.ebuild:
  add version 0.9.2

  28 Feb 2015; Alex Brandt <alunduil@gentoo.org> -fleet-0.5.4.ebuild:
  remove version 0.5.4

*fleet-0.9.1 (28 Feb 2015)

  28 Feb 2015; Alex Brandt <alunduil@gentoo.org> +fleet-0.9.1.ebuild:
  add version 0.9.1

  28 Feb 2015; Alex Brandt <alunduil@gentoo.org> -fleet-0.5.3.ebuild:
  remove version 0.5.3

*fleet-0.9.0 (07 Dec 2014)

  07 Dec 2014; Alex Brandt <alunduil@gentoo.org> +fleet-0.9.0.ebuild,
  fleet-9999.ebuild:
  add version 0.9.0

  06 Nov 2014; Alex Brandt <alunduil@gentoo.org> metadata.xml:
  add Stefan Junker to metadata  Stefan assisted with the latest updates to the
  fleet ebuilds but in my haste to get them in the tree I overlooked mentioning
  this fact.

*fleet-0.8.3 (01 Nov 2014)

  01 Nov 2014; Alex Brandt <alunduil@gentoo.org> +fleet-0.8.3.ebuild,
  fleet-9999.ebuild:
  add version 0.8.3

  28 Aug 2014; Alex Brandt <alunduil@gentoo.org> fleet-9999.ebuild:
  binary moved: fleet -> fleetd

*fleet-9999 (19 Jul 2014)
*fleet-0.5.4 (19 Jul 2014)
*fleet-0.5.3 (19 Jul 2014)

  19 Jul 2014; Alex Brandt <alunduil@gentoo.org> +fleet-0.5.3.ebuild,
  +fleet-0.5.4.ebuild, +fleet-9999.ebuild, +files/fleet.service, +metadata.xml:
  New ebuild for app-admin/fleet. Ebuild adapted from