@@ -1,31 +1,33 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX fleet.service 118 SHA256 6fa93df233fa031230ba361513bf9f674a8b3312056119296a11cc346a8259fe SHA512 6a49a4e353de3a68d328ac18a0b3ea73e59fe0a247d29fe153f8766968d62c7a76c1ed11bf928afd4a753dbc1e9b8377416190bb8394f8d7de69ee95d77100d2 WHIRLPOOL 8a02873ff79ab47fd9731dbf52e1454e531a236319f48c55dec033ca460bda523986ddd27320d628068c68180160b91bc7144166d066680843c8b7c2e95b47f6
+AUX fleet.service 195 SHA256 26145c97b77e18ec6d4e6e637bb627750878554b310fa7b7cc8150aa4d6d8dc8 SHA512 a654cc4f72a5b49c2383713660acfbc127dbc21d363f063a88d0afe02a76c191100b18b6f93bbbce26452458d7afd532a24b44e20bbd321787a63b25178182e5 WHIRLPOOL cf6e50d4d4f0a57b66a7d14f3f4032dda1a4c957ad963b52bba89680fab1678701108cf46a860e2a0e04b008bd2c2f44c259d07c7b301935d00e671ce39174d0
+AUX fleet.socket 42 SHA256 edfda462dda060d70696b5f6df4c875eea3dccb04c5c997e1515b8c335498fae SHA512 85a9bd9bd93c61726ee59e2d00fe3cc7abd91d2f20b1ef2fbb8ad7522f682a2a5376070fa360f3e8c1d19011050fe822445bda4015ed2838efd343242b778230 WHIRLPOOL 5a4878d6cb590dbe1995234fa60a0521edd975e190a204e1deec24e55ad26c4a09794ebe3e3814660c56e3da57a7206d29d9900da49107cc0d10be602260b160
 AUX fleetd.service 119 SHA256 9eb54186ffeef6d531b7bde0c00ddbf44fb2b88c798f19998d096626ac783768 SHA512 b7dbee2b4dcd9159b599af5f8fe0a9858b2ef6bcc2852aa3bba44d047ee1db1f028aaa83d0f97c98e408c4cf62901309140c72d57ad8f7ec88d3c5c971d07cc3 WHIRLPOOL 5a22e813df0aec8f4e34247fdd42551a76c9749c5ff01c176cd95bd9976e682a0ae320b91778fef29b76294b302c857c55a7632f69492e771c459860c0ea4eb2
 DIST fleet-0.10.0.tar.gz 427728 SHA256 024b29cb217a81d04a48e6e5017549149fccfe76042a3570e9a3b8206cefcf48 SHA512 e9ffb51ab6be508e8c5f07860f6ef7c2beabed039870cd4926397ff8d28c9dcdb01c6d18fe513bc429ab9bde7eb8a91644b0534b8396d5ad33d1ace8e7dd7ac6 WHIRLPOOL 458830e2fe0c0937665e4e4ec23992801aaa6938e62b08f1486568fe92f70731f4dfeb83a8b13f5161d8819df7a409388db1c1849ceb3f4011179ea86303b3b0
 DIST fleet-0.9.1.tar.gz 404954 SHA256 573387652fb5b4d6fad99ec344502edd575550bc649ffb6bf43b38309cd85ce7 SHA512 acc80707a6a0142b731c963474a7b31d43790007a28eb05e05f229bc1fb7775cbd64e0ff8cb469954ec76a0219f7501f4b8b51dce4b772ea5db7b3afb97fe50c WHIRLPOOL 8536f5d92090ac20aa2da26153f1c0769ca3288016b27619921036126dd94611e59a678d5f78847e1df61328e6aa4e89f5a2b001a4ce2ebe7a2a3067b57498e7
 DIST fleet-0.9.2.tar.gz 405420 SHA256 7b5c1dd091b304f8e6cbf31a102533a697d4e3212d34eeca53daa69445f71555 SHA512 b7280b1d714162569942db22ba029ff46b28413d81b1c3c9f94876fc7a1e879c58bf4471d813d5121a0a9a0f76d580b9fc146a01af5dc2303bf43536d6d23c7a WHIRLPOOL 9e314a6328ea15b876f083a3b68478b85d1c12d314d210b40e7ac7a1a5950716c27cb82d60a3c950a64107358c97b9ac9b1212bd4d24ece8e8a8f5389359033b
+EBUILD fleet-0.10.0-r1.ebuild 1474 SHA256 3f924ac9f1dff7b094c59fee9f1f40ad82ce7a889e4206f8b990a165722e31b5 SHA512 b37a6f58b45b990bec9a59b374220a6969ca69fa064bff53dffb3fab72f0ad763e44e8ec0667a7c2c11d0607a5fb4eff955c15bf7a453acad0d7fd099b3b796d WHIRLPOOL c43adcdad4e1c47afca91148380a8c8613fa624bb07a5b7b03237afc851374bb92af59ee2f7b0453d2757d45af3c734944b1e4ee2d508fe9853566bb55011777
 EBUILD fleet-0.10.0.ebuild 967 SHA256 6ac86e6213b9231ab23621bdfbb5623f44cf041d7ee5f3a34130ecc1ab791a86 SHA512 50abe7b3ee9c4f54c3cf3801362f1d81345cd0684f25be00a52ed4e5695e9e8e95ef34232c5993ec1f2cdba667307af29ab02a62395ef0a7bdfcd28f739d870b WHIRLPOOL 78f3ad31f5dccc78cc03daf8fc472c56806ea7c5b507e99c7e3283d76edbaa210b75778701ff1d9dd0de48a13f728fd77eb2e0736c885a971436ed952561988a
 EBUILD fleet-0.9.1.ebuild 1243 SHA256 3cc0ee54be1f0a0cdfa459e59ae3de548edd4f4f3f67820fbbb18e9ddc5af2d9 SHA512 9600ff3f3003287d0ef95f4edc988ec3e5d794dea2f5be52a60ad0ae93ad39567740107a1a3ae8e7b830e907565906c8bf337d48b512546f88540cb8d2499045 WHIRLPOOL 6dcdaeee7115d22f59253824093f867b60261f0fed6682265ebd0c8ae1b052bf5f01c2defd2c6b0eb1d8a8a7411d5b2027b4476dbd1d80222e96273cca69c912
 EBUILD fleet-0.9.2.ebuild 966 SHA256 5034eb443a12608afe5f5bc25ad5213664dd6156ed32f98944709eb82d24047f SHA512 b1231a3aceb4a6e42ace296785ab4af4d91a1c7a58ef6bbdfb1800603f3150df3f3bd621654dcbde94e93e29eb55012dcf79cf1585398fd6ddc7eedf9c5b420b WHIRLPOOL 547eca4830655294dd4d1118246fa3adda4cf88ace96029a8ddb2c505a9230336774fb1604b363777b5bce37b3b2a58ab79a61185522f1ce37bb700c351d65a2
 EBUILD fleet-9999.ebuild 936 SHA256 b613ede7d2c18e1bd4152005ebabe89d19fb4f112e6f8f119d95412f791ac7fe SHA512 466594a26ae1ad48cd8b417a1767ebbbd92e7a78af35be2289fef5ea939bd0bd69180db66b49a95456bb697dbde2d31ec52ec71dac3534737a2b51b1dff9da37 WHIRLPOOL 62dec949908fcc5c4c1d799550d4a8dcdd2a2fa11f382147375aca2e426222c420cf138040fe4add292fd70cd7554e53aa7748b5437732de96e8fa0440f80642
-MISC ChangeLog 2010 SHA256 de83694904c376c29dc6e7dd846d9da1720c0fdd9fcc79ce917aec2f794efd4d SHA512 c8da507946d745384051a64edd460d7110a06650465c490d8e9f6a45a93678ceb6b1896c57095836776131811e6f3930fefcbb74111ccd1e922e0b0a0751b8a0 WHIRLPOOL 48a388ce6b9b92aa43ed7fb3f621a6a9b821020ac1aa31df0bee55aac3883bd6da61c8f4645215f388a1dc70a0b67a57ac258e325f08dbe5a00e324550bd1c78
+MISC ChangeLog 2337 SHA256 f17a3819a6c642176a0843c160314f01495cc8534bd9d541d70296a0b5db16f9 SHA512 8b7eb71641f2c4569dbdf04d809138f3894aee78e98f573ca38bd61b53ec687c044c7bae5ba1e3dc152e140928b47ced3ea0bc85341a1d53e4914b82b3134efd WHIRLPOOL 237ba645fea77a3176c012b72887079fd2cf9e3e82c7827bfa011dc07e00bcb1f04fea47555631d8e77abd879c20b1a6f4e310687e2673193cad41510a818737
 MISC metadata.xml 378 SHA256 ecd58d7a2a991b2006187d6a6ec4d2a8ab2bba035e288402d27ae5b82c41aafe SHA512 1f808b9a885435874f283f2e6c5842f5108b316fec70ecd0bdc40f38edf6cc836803e5f298f0e130a70f6c5c5fa733129b7d20522ee8cce2a8e6f42d31089221 WHIRLPOOL 878fd5e646904e6ce25d7ebdc28eb932b9a09be57e10709bc33718997ad1f8c30cb7ccf10b6f28e1156e9e2f500176124e9f2dbe9a32c279ea38bdf2c05d0940
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVMZfcAAoJECZUyt4RqCF8FwcP/RbLiQ57S3sDS5Gpz20vC7jd
-0sgem2+fv1Wc0PeFYWLC8bMjTIRWgebK7AFPWCQwvVHl66VlX2NOFXwbG4PXQTpk
-1/na4WALQ/UjIksvvk9EETGv0oXAQUmfhdEGPX9G7UAzGQR7XTRQmQewP8ywQu6m
-J6tIYiFWkI+MwPwFV3JBYFANmGObYQ8WRENiT+xM12X3bL6dbPE0sTMbuly/d/eR
-ptQqi18egnhayFgOeoYz8jynMicor2mettNT+IuXyCkORouqQGqvyJp0QXgAC+ce
-SbNLNcPGEyf+/oLhevWsa8o8SOcC6aYLZWCSLIFRcoNv6qMCEgi0MWgyi4somCqK
-R1Bg0/K74VM6yN9k8hGxCk7sy+BISH8el8geQNFgS/UTk9dhJeAWIHO1J2HXAbci
-lEDnL6SULAEOkT4G1wyHXMQlpAJr60t09eWPA/hE3sF/coDCwP2CvqMmq4UhbLiq
-4xabrJPPvWZiLK5bQMRM1mPQS/8W8jRJ5tqU/mixEFtm7B1h+s9eKrtm8yjGZpJ2
-dUp45JgDetvDtSFOQ3KV20otYIz1Ex3ye9tUxLUCsdjrp4OHZ0V1BDhviTaSnaid
-mPcsUjvwL3TQw2lJNZof9vh8d5tJyIz8cNtI8P/lQsoaxRqJfopJTm3d3PgajBXr
-rXviL1VsQRwQDzf640jD
-=YMsm
+iQIcBAEBCAAGBQJVPAxvAAoJECZUyt4RqCF8C/0P/A3S8+InGP07zkFLIF50S8A8
+TXv7LTysJODpkczxH30ExQOz+8d9a5V5Xnkl1Va8M8rNf+pkTgfPjR2NocYqGsbY
+jmAQaYOfZe02HPiR2wEvtH4+zbhWYpFMw6Fov3nXvDYXA29SR8A5Mful+vKvBAya
+UnIJkRokuuAKTv60t25thQWytDsssYaVhz+KFv1sv6bXCFLyi1wwEvnp1+YOz9v4
+xAhtYkcbeLP+JZC0OfM76h5/bswytegQHbwyE7GACFm5ZFcMeTJdpI9lEuz30+wR
+YxUwF8brubWT7b6Ll3LYBLqdrt/8fsOLGTzrrpvEqbWcE7WT1RpEJWEpab3JYW8N
+sq3XaFc5rY2vVccz1OfS5dlfq68ibjZaB4FLn09NX/JmZzpdOIeTK33SrwuxhtbI
+o+LYnHE4iwNuqM+R3mM8UiYyekhHo8+Ka17EOBVjUrKWZ9aP6RrA9IONjc3tkLYc
+Hq1cSYfEa5ZsR4tDO20VgpurgG2Ca8DjHYOPMnVIEnK/kfacyELm2eFw7c0AupGs
+/QXXXQ0aEPgOY4yKB64QPpTqB5wWGJd125088Xumg8z0jSusutrE8xhlUde9HpTD
+HBe09klHhZ5Q/gMhN3EaBjPhyy0on0R3uN7nGp0qY1kQP9PxSRqH7vXyPo/spWBn
+RtIs2oGYGYPLNVBluthR
+=0+ut
 -----END PGP SIGNATURE-----
