@@ -1,9 +1,14 @@
 [Unit]
-Description=fleet
+Description=fleet daemon
 Wants=etcd.service
 
+Wants=fleet.socket
+After=fleet.socket
+
 [Service]
-ExecStart=/usr/bin/fleet
+ExecStart=/usr/bin/fleetd
+Restart=always
+RestartSec=10s
 
 [Install]
 WantedBy=multi-user.target
