@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst test unpack
+DEPEND=>=dev-lang/go-1.3 virtual/pkgconfig
+DESCRIPTION=A Distributed init System
+EAPI=5
+HOMEPAGE=https://github.com/coreos/fleet
+IUSE=doc examples
+KEYWORDS=~amd64
+LICENSE=Apache-2.0
+RESTRICT=test
+SLOT=0
+SRC_URI=https://github.com/coreos/fleet/archive/v0.10.0.tar.gz -> fleet-0.10.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
+_md5_=f535c3007842439a07d39d319d3a91d7
